[package]
name = "api_chrono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_with = "3.0.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
